@@ -5,6 +5,7 @@
 #include "lxgui/gui_manager.hpp"
 #include "lxgui/gui_uiroot.hpp"
 #include "lxgui/gui_registry.hpp"
+#include "lxgui/gui_virtual_uiroot.hpp"
 #include "lxgui/gui_virtual_registry.hpp"
 #include "lxgui/gui_out.hpp"
 
@@ -942,12 +943,16 @@ void uiobject::notify_invisible()
 
 registry& uiobject::get_registry()
 {
-    return is_virtual() ? get_manager().get_virtual_registry() : get_manager().get_registry();
+    return is_virtual() ?
+        get_manager().get_virtual_root().get_registry() :
+        get_manager().get_root().get_registry();
 }
 
 const registry& uiobject::get_registry() const
 {
-    return is_virtual() ? get_manager().get_virtual_registry() : get_manager().get_registry();
+    return is_virtual() ?
+        get_manager().get_virtual_root().get_registry() :
+        get_manager().get_root().get_registry();
 }
 
 }
