@@ -67,6 +67,10 @@ Other changes:
  - gui: added event_data class
  - gui: added frame::get_rough_num_children and get_rough_num_regions
  - gui: added uiroot to hold root frames
+ - gui: added virtual_uiroot to hold virtual root frames
+ - gui: added factory to manage uiobject creation functions
+ - gui: added registry to handle uiobject lookup by name
+ - gui: added uiobject::is_loaded() and clarify the semantic
  - gui: renamed gui::manager_impl into gui::renderer
  - gui: renamed gui::gl::manager into gui::gl::renderer
  - gui: renamed gui::gl::matrix4f into gui::matrix4f and reworked internals of the class
@@ -96,6 +100,7 @@ Other changes:
  - gui: removed uiobject::get_abs_width/height and added uiobject::get_dimensions()
  - gui: removed uiobject::get_apparent_width/height and added uiobject::get_apparent_dimensions()
  - gui: removed uiobject::set_newly_created/is_newly_created (no longer necessary)
+ - gui: removed manager::is_loading_ui() (no longer necessary)
  - gui: edit_box::set_text_insets now takes a single bounds2f argument
  - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
  - gui: frame::on_script now takes a 'const event_data&' instead of an 'event*' argument
